--- a/jp/effects-1.qmd
+++ b/jp/effects-1.qmd
@@ -54,7 +54,7 @@ Keywords: effect measure, language & writing, observational study
 :::
 
 ::: voice-father
-お父さん「それとは別。うん、そこは日本語特有の言い回しだから間違えやすいよね。この場合の率は百分率の意味で使っているんだけど、疫学でいう**率（rate）**とは計算が違うんだ。ややこしいのはそこだけじゃない。この場合の95%は、プラセボに比べて発症リスクが95%って意味だから」
+お父さん「それとは別。うん、そこは日本語特有の言い回しだから間違えやすいよね。この場合の率は百分率の意味で使っているんだけど、疫学でいう**率（rate）**とは計算が違うんだ。ややこしいのはそこだけじゃない。この場合の95%は、プラセボに比べて発症リスクが5%に下がるって意味だから」
 :::
 
 - ワクチン有効率は疫学一般で用いられる率ではない
@@ -134,6 +134,7 @@ $$
 ::: voice-father
 お父さん「いや、聞けばすぐわかるよ。ワクチン有効率の数字は、臨床データから推定されたものでしょ。たくさんの参加者を対象に臨床試験を行って、実際に観察されたという経験が、ぎゅっと要約された結果が、この数字なんだ。でも、データ上でどんな結果が観察されたか、ワクチン有効率だけでは伝わらないでしょ。こういうのを"数字が独り歩きする"っていうんだ」
 :::
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note appearance="simple"  title="ワクチンランダム化臨床試験の数値例"}
 
@@ -152,6 +153,7 @@ $\pi_2 = 800/1000 = 0.8$
 $VE=\frac{\pi_2-\pi_1}{\pi_2}=95 \%$
 :::
 
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「確かにね。95%有効っていう数字だけみると、”ほぼ確実に救える”って意味に捉えがちだけど、よく考えたらワクチンにそこまでの効果はないよね。パーセントを使ったレトリックに騙されちゃいそう」
 :::
